# pdf-to-markdown

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pdf_to_markdown/: __init__.py  arxiv.py  cli.py  config.py  downloader.py  models.py  storage.py  url_utils.py  validators.py  workflow.py
pdf_to_markdown/converters/: __init__.py  base.py  docling.py  markitdown.py  registry.py
tests/: test_arxiv.py  test_cli.py  test_config.py  test_converters.py  test_main.py  test_storage.py  test_url_utils.py  test_validators.py  test_workflow.py
